# rust-autograd

./: .travis.yml  Cargo.toml  README.md
examples/: cnn_mnist.rs  lstm_lm.rs  mlp_mnist.rs
src/: gradient.rs  graph.rs  lib.rs  ndarray_ext.rs  op.rs  runtime.rs  tensor.rs  test_helper.rs  variable.rs
src/ops/: activation_ops.rs  array_ops.rs  binary_ops.rs  blas_ffi.rs  dot_ops.rs  hook_ops.rs  math_ops.rs  mod.rs  reduction_ops.rs  xent_ops.rs
src/ops/conv_ops/: conv2d.rs  conv2d_transpose.rs  max_pool2d.rs  mod.rs
src/ops/gradient_descent_ops/: adam.rs  sgd.rs
src/optimizers/: adam.rs  sgd.rs
tests/: test_binary_ops_eval.rs  test_binary_ops_grad.rs  test_core.rs  test_optimizers.rs  test_tensor_ops_eval.rs  test_tensor_ops_grad.rs
