[package]
name = "autograd"
version = "1.1.0"
authors = ["raskr <janne.dc.ib.sa@gmail.com>"]
edition = "2018"

repository = "https://github.com/raskr/rust-autograd"
keywords = ["numerics", "machine-learning", "ndarray", "multidimensional", "neural-network"]
license-file = "LICENSE"
readme = "README.md"
description = "Tensors and differentiable operations in Rust"
documentation = "https://docs.rs/autograd/"

[dependencies]
rand = "0.8.0"
rand_distr = "0.4.0"
ndarray = "0.12.1"
rayon = "1.0"
libc = "0.2"
matrixmultiply = "0.2.2"
num-traits = "0.2"
num = "0.3"
rustc-hash = "1.0.1"
smallvec = "1.2.0"
uuid = { version = "0.8", features = ["v4"] }
# -- blas deps
blas-src = { version = "0.7", optional = true }
intel-mkl-src = { version = "0.6.0+mkl2020.1", features = ["mkl-dynamic-lp64-seq"], optional = true }
#openblas-src = { version = "0.9", cblas = false, lapacke = false, optional = true }
cblas-sys = { version = "0.1.4", optional = true }

[features]
blas = []
intel-mkl = ["intel-mkl-src", "intel-mkl-src/mkl-dynamic-lp64-seq", "cblas-sys"]
#openblas = ["openblas-src", "cblas-sys"]
accelerate = ["blas-src", "blas-src/accelerate", "cblas-sys"]

[lib]
name = "autograd"
path = "src/lib.rs"

[[example]]
name = "mlp_mnist"
path = "examples/mlp_mnist.rs"

[[example]]
name = "lstm_lm"
path = "examples/lstm_lm.rs"

[[example]]
name = "cnn_mnist"
path = "examples/cnn_mnist.rs"

#[[bin]]
#name = "flamegraph_bench"
#path = "flamegraph_bench/large_graph.rs"